--- a/conf/extra/httpd-info.conf
+++ b/conf/extra/httpd-info.conf
@@ -13,8 +13,7 @@
 
 <Location /server-status>
     SetHandler server-status
-    Require host .example.com
-    Require ip 127
+    Require local
 </Location>
 
 #
@@ -22,7 +21,7 @@
 # information (ExtendedStatus On) or just basic information (ExtendedStatus
 # Off) when the "server-status" handler is called. The default is Off.
 #
-#ExtendedStatus On
+ExtendedStatus On
 
 #
 # Allow remote server configuration reports, with the URL of
@@ -31,6 +30,5 @@
 #
 <Location /server-info>
     SetHandler server-info
-    Require host .example.com
-    Require ip 127
+    Require local
 </Location>
