--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -123,7 +123,7 @@ LoadModule env_module modules/mod_env.so
 #LoadModule ident_module modules/mod_ident.so
 #LoadModule imagemap_module modules/mod_imagemap.so
 LoadModule include_module modules/mod_include.so
-#LoadModule info_module modules/mod_info.so
+LoadModule info_module modules/mod_info.so
 LoadModule isapi_module modules/mod_isapi.so
 #LoadModule lbmethod_bybusyness_module modules/mod_lbmethod_bybusyness.so
 #LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
@@ -169,7 +169,7 @@ LoadModule setenvif_module modules/mod_setenvif.so
 #LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule ssl_module modules/mod_ssl.so
-#LoadModule status_module modules/mod_status.so
+LoadModule status_module modules/mod_status.so
 #LoadModule substitute_module modules/mod_substitute.so
 #LoadModule unique_id_module modules/mod_unique_id.so
 #LoadModule userdir_module modules/mod_userdir.so
@@ -248,10 +248,7 @@ DocumentRoot "${PVC_DOCUMENT_ROOT}"
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
-    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
-    #
-    # Note that "MultiViews" must be named *explicitly* --- "Options All"
-    # doesn't give it to you.
+    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI
     #
     # The Options directive is both complicated and important.  Please see
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
@@ -477,9 +474,6 @@ LogLevel warn
 # Server-pool management (MPM specific)
 #Include conf/extra/httpd-mpm.conf
 
-# Multi-language error messages
-#Include conf/extra/httpd-multilang-errordoc.conf
-
 # Fancy directory listings
 #Include conf/extra/httpd-autoindex.conf
 
@@ -490,7 +484,7 @@ LogLevel warn
 #Include conf/extra/httpd-userdir.conf
 
 # Real-time info on requests and configuration
-#Include conf/extra/httpd-info.conf
+Include conf/extra/httpd-info.conf
 
 # Virtual hosts
 #Include conf/extra/httpd-vhosts.conf
